Navigating to the Checkout Page and fix scrollbar

--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -2,7 +2,9 @@
     width: 100%;
     height: 250px;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
+    /* For FireFox */
+    scrollbar-width: none;
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
@@ -10,6 +12,21 @@
     border-radius: 10px;
     margin: auto auto 20px;
 }
+
+.Burger::-webkit-scrollbar {
+    width: 12px;
+}
+
+.Burger::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);
+    border-radius: 10px;
+}
+
+.Burger::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);
+}
+
 
 @media (min-width: 500px) and (min-height: 400px) {
     .Burger {
